# chatserver

./: Cargo.toml  README.md
data/: room_room
proto/: chat.proto
src/: client.rs  common.rs  lib.rs  server.rs
src/client/: clib.rs  main.rs  mod.rs
src/server/: config  main.rs  mod.rs  slib.rs
